--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="ru_RU">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta name="viewport" content="width=1170">
     <title>Loftschool intermediate test</title>
     <!-- build:css css/vendor.css -->
     <!-- bower:css -->
@@ -11,7 +13,60 @@
     <meta name="viewport" content="width=1170">
 </head>
 <body>
-
+<div class="wrapper">
+    <div class="main-content">
+        <header class="header">
+            <div class="container">
+                <div class="header__left">
+                    <div class="avatar">
+                        <img class="avatar__img" src="assets/images/avatar/avatar.png" alt="Avatar">
+                    </div>
+                    <div class="user-info">
+                        <div class="name">
+                        Vlad Tepes
+                        </div>
+                        <a href="mailto: vg.email.2@gmail.com" class="email">
+                            vg.email.2@gmail.com
+                        </a>
+                    </div>
+                </div>
+                <div class="header__right">
+                    <ul class="socials">
+                        <li class="socials__item">
+                            <a href="#" class="socials__link">
+                                <svg class="socials__link-ico">
+                                    <use xlink:href="assets/images/icons/sprite/socials-sprite.svg#git"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a href="#" class="socials__link">
+                                <svg class="socials__link-ico">
+                                    <use xlink:href="assets/images/icons/sprite/socials-sprite.svg#sk"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a href="#" class="socials__link">
+                                <svg class="socials__link-ico">
+                                    <use xlink:href="assets/images/icons/sprite/socials-sprite.svg#vk"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+        <main class="content">
+            <div class="container">
+            </div>
+        </main>
+    </div>
+</div>
+<div class="footer">
+    <div class="container">
+    </div>
+</div>
 <!-- build:js js/vendor.js -->
 <!-- bower:js -->
 <!-- endbower -->
