page coding finished

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="user-info">
                         <div class="name">
-                        Vlad Tepes
+                            Vlad Tepes
                         </div>
                         <a href="mailto: vg.email.2@gmail.com" class="email">
                             vg.email.2@gmail.com
@@ -58,15 +58,282 @@
             </div>
         </header>
         <main class="content">
-            <div class="container">
-            </div>
+            <section class="section1">
+                <div class="container">
+                    <div class="section1__top">
+                        <div class="title">
+                            О будущем ученике
+                        </div>
+                        <div class="description">
+                            Ребятам из Loftschool будет полезно узнать немного обо мне
+                        </div>
+                    </div>
+                    <div class="section1__bot">
+                        <ul class="about-list">
+                            <li class="about-block">
+                                <div class="about-block__left">
+                                    <div class="about-image-wrapper">
+                                        <img class="about-image" src="assets/images/section1/hello.png" alt="Hello">
+                                    </div>
+                                </div>
+                                <div class="about-block__right">
+                                    <div class="about-title">
+                                        Немного обо мне
+                                    </div>
+                                    <div class="desc">
+                                        <p>
+                                            Я живу в Санкт-Петербурге (Россия). Мне 26 лет. Высшее образование -
+                                            закончил
+                                            НИУ
+                                            ИТМО. Опыт в разработке 1 год. Уже окончил курсы в Академии
+                                            Программирования,
+                                            где не
+                                            плохо научился верстать. Пока есть только один сайт, которым могу
+                                            похвастаться:
+                                            www.yandex.ru
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="about-block">
+                                <div class="about-block__left">
+                                    <div class="about-image-wrapper">
+                                        <img class="about-image" src="assets/images/section1/experience.png"
+                                             alt="Hello">
+                                    </div>
+                                </div>
+                                <div class="about-block__right">
+                                    <div class="about-title">
+                                        Мой опыт в разработке
+                                    </div>
+                                    <div class="desc">
+                                        <p>
+                                            В этом блоке я расскажу о себе, что я уже умею. Здесь я укажу другие курсы,
+                                            которые до этого я уже проходил. Могу перечислить технологии, которыми уже
+                                            умею
+                                            пользоваться. К примеру: html5, css3, sass, jade, git и пр.
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="section2">
+                <div class="container">
+                    <div class="section2__top">
+                        <div class="title">
+                            Курсы на Loftblog
+                        </div>
+                        <div class="description">
+                            Помогут в выполнении этого задания
+                        </div>
+                    </div>
+                    <div class="section2__bot">
+                        <ul class="courses-list">
+                            <li class="courses-item">
+                                <a href="#" class="courses-block">
+                                    <div class="courses-image-wrapper">
+                                        <img class="courses-image" src="assets/images/section2/js.png" alt="JS">
+                                    </div>
+                                    <div class="courses-main">
+                                        <div class="courses-title">
+                                            Основы JavaScript
+                                        </div>
+                                        <div class="desc">
+                                            <p>
+                                                Видеокурс об одном из самых популярных языков программирования -
+                                                JavaScript.
+                                                Изучая
+                                                этот курс вы познаете этот прекрасный язык от самых основ.
+                                            </p>
+                                        </div>
+                                        <div class="courses-timer">
+                                            <i class="fas fa-clock"></i>
+                                            <p>24 урока (6 часов 46 минут)</p>
+                                        </div>
+                                    </div>
+                                    <div class="courses-checkbox">
+                                        <div class="checkbox">
+                                            <i class="fas fa-check"></i>
+                                        </div>
+                                        <p>
+                                            Посмотрел
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="courses-item">
+                                <a href="#" class="courses-block">
+                                    <div class="courses-image-wrapper">
+                                        <img class="courses-image" src="assets/images/section2/jq.png" alt="JS">
+                                    </div>
+                                    <div class="courses-main">
+                                        <div class="courses-title">
+                                            Основы jQuery
+                                        </div>
+                                        <div class="desc">
+                                            <p>
+                                                Видеокурс об одном из самых популярных языков программирования -
+                                                JavaScript.
+                                                Изучая
+                                                этот курс вы познаете этот прекрасный язык от самых основ.
+                                            </p>
+                                        </div>
+                                        <div class="courses-timer">
+                                            <i class="fas fa-clock"></i>
+                                            <p>11 уроков (2 часа 6 минут)</p>
+                                        </div>
+                                    </div>
+                                    <div class="courses-checkbox">
+                                        <div class="checkbox">
+                                            <i class="fas fa-check"></i>
+                                        </div>
+                                        <p>
+                                            Посмотрел
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="courses-item">
+                                <a href="#" class="courses-block">
+                                    <div class="courses-image-wrapper">
+                                        <img class="courses-image" src="assets/images/section2/base.png" alt="JS">
+                                    </div>
+                                    <div class="courses-main">
+                                        <div class="courses-title">
+                                            Базовые элементы страницы
+                                        </div>
+                                        <div class="desc">
+                                            <p>
+                                                Видеокурс по верстке и программированию основных и популярных элементов
+                                                сайтов. Посмотрев этот курс вы научитесь создавать табы, аккордеон,
+                                                слайдшоу, слайдер и т.д.
+                                            </p>
+                                        </div>
+                                        <div class="courses-timer">
+                                            <i class="fas fa-clock"></i>
+                                            <p>9 уроков (2 часа 7 минут)</p>
+                                        </div>
+                                    </div>
+                                    <div class="courses-checkbox">
+                                        <div class="checkbox">
+                                            <i class="fas fa-check"></i>
+                                        </div>
+                                        <p>
+                                            Посмотрел
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="courses-item">
+                                <a href="#" class="courses-block">
+                                    <div class="courses-image-wrapper">
+                                        <img class="courses-image" src="assets/images/section2/adaptive.png" alt="JS">
+                                    </div>
+                                    <div class="courses-main">
+                                        <div class="courses-title">
+                                            Создание адаптивных сайтов
+                                        </div>
+                                        <div class="desc">
+                                            <p>
+                                                В этом курсе вы узнаете как создавать адаптивные сайты, что такое
+                                                адаптивная верстка и дизайн.
+                                            </p>
+                                        </div>
+                                        <div class="courses-timer">
+                                            <i class="fas fa-clock"></i>
+                                            <p>7 уроков (2 часа 11 минут)</p>
+                                        </div>
+                                    </div>
+                                    <div class="courses-checkbox">
+                                        <div class="checkbox">
+                                            <i class="fas fa-check"></i>
+                                        </div>
+                                        <p>
+                                            Посмотрел
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="courses-item">
+                                <a href="#" class="courses-block">
+                                    <div class="courses-image-wrapper">
+                                        <img class="courses-image" src="assets/images/section2/button.png" alt="JS">
+                                    </div>
+                                    <div class="courses-main">
+                                        <div class="courses-title">
+                                            Генератор кнопок
+                                        </div>
+                                        <div class="desc">
+                                            <p>
+                                                В этом видеокурсе вы изучите инструменты, техники и подходы для
+                                                web-разработчика, которые помогут вам решать поставленные задачи более
+                                                быстро и эффективно.
+                                            </p>
+                                        </div>
+                                        <div class="courses-timer">
+                                            <i class="fas fa-clock"></i>
+                                            <p>6 уроков (1 час 9 минут)</p>
+                                        </div>
+                                    </div>
+                                    <div class="courses-checkbox">
+                                        <div class="checkbox">
+                                            <i class="fas fa-check"></i>
+                                        </div>
+                                        <p>
+                                            Посмотрел
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="courses-item">
+                                <a href="#" class="courses-block">
+                                    <div class="courses-image-wrapper">
+                                        <img class="courses-image" src="assets/images/section2/css-gallery.png" alt="JS">
+                                    </div>
+                                    <div class="courses-main">
+                                        <div class="courses-title">
+                                            Вёрстка адаптивной CSS-галереи
+                                        </div>
+                                        <div class="desc">
+                                            <p>
+                                                В этом курсе мы разберем как сверстать адаптивную css галерею. Также познакомимся с Flexbox.
+                                            </p>
+                                        </div>
+                                        <div class="courses-timer">
+                                            <i class="fas fa-clock"></i>
+                                            <p>4 урока (50 минут)</p>
+                                        </div>
+                                    </div>
+                                    <div class="courses-checkbox">
+                                        <div class="checkbox">
+                                            <i class="fas fa-check"></i>
+                                        </div>
+                                        <p>
+                                            Посмотрел
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </div>
-<div class="footer">
+<footer class="footer">
     <div class="container">
+        <div class="footer__text">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias deleniti dolorum iste minus nihil odit
+                optio praesentium quia quidem unde?
+            </p>
+        </div>
     </div>
-</div>
+</footer>
 <!-- build:js js/vendor.js -->
 <!-- bower:js -->
 <!-- endbower -->
