--- a/src/index.html
+++ b/src/index.html
@@ -319,6 +319,10 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="completed">
+                        <i class="fas fa-check"></i>
+                        <p>Задание выполнено</p>
+                    </div>
                 </div>
             </section>
         </main>
